--- a/about.css
+++ b/about.css
@@ -9,50 +9,70 @@
         border: none;
         
     }
-    /* Navbar */
-    .navbar{
-        display:flex;
-        justify-content: center;
-        border: 2px solid black;
-        border-width: 1px;
-    }
-    .navbar ul{
-        display: flex;
-        list-style: none;
-        margin: 20px 0px;
-        gap: 30px;
-        /* justify-content: space-between; */
-        justify-content: end; 
-        padding: 20px;
-    }
-    .nav{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-    }
 
-    .navbar-header{
-        font-size: 40px;
-        font-family:'Times New Roman', Times, serif;
-        margin: 30px;
+    .nav {
+      height: 50px;
+      width: 100%;
+      position: relative;
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
     }
-    .navbar-lists{
-        display: flex;
+    
+    .nav > .nav-header {
+      display: inline;
+      font-size: 70px;
+      font-family:'Times New Roman', Times, serif;
+      margin: 30px;
+    }
+    
+    .nav > .nav-header > .nav-title {
+      display: inline-block;
+      font-size: 62px;
+      color: black;
+      padding: 10px 10px 10px 10px;
+    }
+    .header-class{
+      align-items: center;
+      padding: 20px;
+    }
+    
+    .nav > .nav-btn {
+      display: none;
+    }
+    
+    .nav > .nav-links {
+      display: inline;
+      float: right;
+      font-size: 18px;
+      display: flex;
         gap: 40px;
         list-style-type: none;
         color: black;
         text-decoration: none;
         cursor: pointer;
         font-weight: bold;
-        /* border: 2px solid red; */
     }
-    .navbar-lists a{
-      font-weight: bold;
+    
+    .nav > .nav-links > a {
+      display: inline-block;
+      padding: 13px 10px 13px 10px;
+      text-decoration: none;
       color: black;
-    text-decoration:none;
     }
+    
+    
+    /* .nav > .nav-links > a:hover {
+      background-color: rgba(0, 0, 0, 0.3);
+    } */
+    
+    .nav > #nav-check {
+      display: none;
+    }
+    
+   
     
 
       .center{
@@ -158,28 +178,71 @@
 
   /* Block of code */
 
-    .nav{
-      display: flex;
-      border: solid red;
-      flex-direction: column;
-      justify-content: space-between;
-      /* width: 100%; */
-    }
-    .navbar-header{
-      font-size: 20px;
-    }
-  
- 
-    .nav-active{
-      transform: translateX(0%);
-    }
+  .nav > .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+  .nav > .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  .nav > .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  .nav > .nav-links {
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-color: #333;
+    height: 0px;
+    transition: all 0.3s ease-in;
+    overflow-y: hidden;
+    top: 50px;
+    left: 0px;
+  }
+  .nav > .nav-links > a {
+    display: block;
+    width: 100%;
+  }
+  .nav > #nav-check:not(:checked) ~ .nav-links {
+    height: 0px;
+  }
+  .nav > #nav-check:checked ~ .nav-links {
+    height: calc(100vh - 50px);
+    overflow-y: auto;
+  }
+  .nav > .nav-header > .nav-title {
+    display: inline-block;
+    font-size: 32px;
+    color: black;
+    padding: 5px;
+  }
+  .header-class{
+    align-items: center;
+    padding: 20px;
+  }
+
+
+   
+
+
     .center{
-        /* display: block; */
-        width: 100%;
-        align-content: center;
-        /* padding: 20px; */
-    }
-    .header-cont{
+      /* display: block; */
+      width: 100%;
+      align-content: center;
+      /* padding: 20px; */
+  }
+  .header-cont{
       display: flex;
       flex-direction: column;
       /* border: solid red; */
@@ -206,7 +269,7 @@
     }
 
     .hr{
-      width: 100
+      width: 100;
     }
 
 
@@ -228,11 +291,7 @@
     width: 100%;
   }
 
-  }
-  /* .footer{
-    width: 100%;
-    /* border: 2px solid red; */
-  } */
+  
   .end{
     /* border:  solid red; */
     background-color: black;
@@ -262,6 +321,5 @@
    gap: 20px;
    list-style: none;
   }
-      
-      
+}
       
