--- a/style.css
+++ b/style.css
@@ -9,82 +9,60 @@
         border: none;
         
     }
-    /* Navbar */
-    .navbar{
-        display:flex;
-        justify-content: center;
-        border: 2px solid black;
-        border-width: 1px;
-    }
-    .navbar ul{
-        display: flex;
-        list-style: none;
-        margin: 20px 0px;
-        gap: 30px;
-        /* justify-content: space-between; */
-        justify-content: end; 
-        padding: 20px;
-    }
-    .nav{
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-    }
-   /* a:after{
-      content: "";
-      position: absolute;
-      background-color: aqua;
-      height: 3px;
+    .nav {
+      height: 50px;
       width: 100%;
-      left: 0px;
-      bottom: -1px;
-    } */
-    .navbar-header{
-        font-size: 40px;
-        font-family:'Times New Roman', Times, serif;
-        margin: 30px;
+      position: relative;
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
     }
-    .navbar-lists{
-        display: flex;
+    
+    .nav > .nav-header {
+      display: inline;
+      font-size: 70px;
+      font-family:'Times New Roman', Times, serif;
+      margin: 30px;
+    }
+    
+    .nav > .nav-header > .nav-title {
+      display: inline-block;
+      font-size: 62px;
+      color: black;
+      padding: 10px 10px 10px 10px;
+    }
+    .header-class{
+      align-items: center;
+      padding: 20px;
+    }
+    
+    .nav > .nav-btn {
+      display: none;
+    }
+    
+    .nav > .nav-links {
+      display: inline;
+      float: right;
+      font-size: 18px;
+      display: flex;
         gap: 40px;
         list-style-type: none;
         color: black;
         text-decoration: none;
         cursor: pointer;
         font-weight: bold;
-        /* border: 2px solid red; */
     }
-    .navbar-lists a{
-      font-weight: bold;
+    
+    .nav > .nav-links > a {
+      display: inline-block;
+      padding: 13px 10px 13px 10px;
+      text-decoration: none;
       color: black;
-    text-decoration:none;
-    }
-    .navbar-lists::a:after {
-      content: "";
-      background-color: aqua;
-      height: 3px;
-      width: 0;
-      height: 3px;
-      margin: auto;
-      display: block;
-    }
-    .navbar-lists a:hover::after {
-      width: 100%;
-      transition: width 0.3s linear;
-    }
-    .burger{
+    }  
+    .nav > #nav-check {
       display: none;
-      cursor: pointer;
-    }
-    .burger div{
-     width: 25px;
-     height: 3px;
-     background-color:black;
-     margin: 5px;
-     padding-top: 5px;
-     
     }
       .center{
         display: block;
@@ -103,20 +81,16 @@
         height: 185px;
         justify-content: center;
         padding: 50px;
-        /* margin-left: 230px; */
       }
       .content2{
         font-family:monospace;
-        /* border: 2px solid red; */
         text-align: center;
         font-size: 20px;
         padding: 50px;
-        /* margin-left: 300px; */
-        /* padding-left: 100px; */
         width: 626px;
-        /* height: 68px; */
         margin: auto;
       }
+  
       .body-content{
         margin: auto;
         width: 700px;
@@ -133,9 +107,7 @@
         gap: 10px;
       }
       .hr{
-        width: 50%;
-        /* position: absolute; */
-        /* left: 350px; */
+        width: 100%;
       }
       .bodyimage{
         height: 57px;
@@ -148,65 +120,40 @@
         display:flex;
         justify-content: space-between;
       }
-      images{
-        gap: 70px;
-        font-size: 5px;
-      }
       .imag{
-        justify-content: space-between;
+        display: flex;
+        gap: 20px;
       }
       .info{
         font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
-      .p2{
-        padding: 20px;
-        left: 250px;
-        width: auto;
-      }
       .next{
         padding: 10px;
-        text-align:left;
-        left: 80px;
-        margin:20px;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 20px;
       }
       .info2{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
-      .infop{
-        padding: 20px;
-        width: auto
-      } 
-  .man{
-          display: block;
-          /* margin-left: auto; */
-          margin-right: auto;
-          width: 50%;
-          align-content: center;
-        }
+  
    
       .man2{
         text-align: center;
-        margin-right: auto;
-        left: 479px;
-        width: 481px;
         font-family: sans-serif;
       }
 
       .an{
-        padding:30px;
-        margin: auto;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
       }
       .in{
-        padding: 20px;
+        /* padding: 20px; */
+        margin: auto;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        left: 200px;
+        /* left: 200px; */
       }
       .list{
-        padding: 20px;
+        padding: 10px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
     .list-items{
@@ -230,20 +177,21 @@
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     .class{
-padding: 10px;
+/* padding: 10px; */
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
     .thanks{
+      padding: 10px;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-     width: 200px;
+     /* width: 200px; */
     }
-    .social media{
-      justify-content: space-between;
+    .social{
       display: flex;
+      justify-content: space-between;
+      gap: 10px;
     }
     .media1{
-      padding: 10px;
       margin: auto;
       align-items: self-end;
     }
@@ -253,11 +201,11 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
       align-items: self-end;
     }
     .design1{
-display: flex;
-gap: 20px;
+    display: flex;
+    gap: 20px;
     }
     .text2{
-width: 700px;
+   width: 700px;
     }
 
     .footer{
@@ -314,6 +262,9 @@ width: 700px;
       color: white;
       box-shadow: none;
     }
+    .img_container {
+      display: none;
+    }
 
     .end{
       background-color: black;
@@ -342,198 +293,280 @@ width: 700px;
      text-decoration: underline;
      gap: 20px;
      list-style: none;
+    }
+    .anohterVersion {
+      display: none;
+    }
+    .container {
+      display: none;
+    }
+    .hide {
+      display: none;
     }
 
 
     /* * For mobile */ 
 @media only screen and (max-width: 500px) {
-
-    /* Block of code */
-
-      .nav{
-        display: flex;
-        border: solid red;
-        flex-direction: column;
-        justify-content: space-between;
-        /* width: 100%; */
-      }
-      .navbar-header{
-        font-size: 20px;
-      }
-      body{
-        /* overflow-x: hidden; */
-      }
-      .navbar-lists{
-        /* border: solid red; */
-        /* display: none; */
-        /* position: absolute; */
-        /* right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: yellow;
-        display: none;
-        flex-direction: column;
-        align-items: center ;
-        transform: translateX(100%);
-        opacity: 0;
-        transition: tranform 0.5s ease-in; */
-      }
-      .burger{
-        /* display: block; */
-      }
-      .nav-active{
-        transform: translateX(0%);
-      }
-      .center{
-          /* display: block; */
-          width: 100%;
-          align-content: center;
-          /* padding: 20px; */
-      }
-      .header-cont{
-        display: flex;
-        flex-direction: column;
-        /* border: solid red; */
-      }
-      .content{
-        /* border: solid red; */
-        width: 100%;
-        /* padding: 5px; */
-      font-size: 26px;
-      }
-      .content2{
-        /* border: solid red; */
-        font-family:monospace;
-        font-size: 18px;
-        width: 100%;
-        /* padding: 10px; */
-      }
-
-      .body-content{
-        margin: auto;
-        width: 100%;
-        align-content: center;
-        padding: 10px;
-      }
-
-      .hr{
-        width: 100%;
-        /* position: absolute; */
-        /* left: 350px; */
-      }
-
-      .man{
-        display: block;
-        /* margin-left: auto; */
-        /* margin-right: auto; */
-        width: 100%;
-        align-content: center;
-      }
-      .man img{
-        width: 100%;
-      }
-      .man2{
-        width: 100%;
-      }
-
-      .what{
-        text-align: center;
-        font-weight: 700;
-        font-size: 30px;
-        /* padding-bottom: 30px; */
-      }
-      .more-img{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 10px;
-        text-align: center;
-        width:100%
-        align-content: center;
-    }
-    .more-img img{
-      width: 100%;
-    }
-    .sign{
-      border: 2px solid black;
-      /* height: 180px; */
-      width: 100%;
-      align-content: center;
-      margin: 0px;
-    }
-    .input{
-      width: 100%;
-      /* height:30px; */
-      margin: 0px;
-      /* margin-right: 0px; */
-    }
-    #send{
-      width: 100%;
-      /* height:30px; */
-      margin: 0px;
-    
-    }
-
-    .info{
-text-align: center;
-margin: auto;
-    }
-
-    .p2{
-text-align: center;
-margin: auto;
-    }
-    .info2{
-      text-align: center;
-      margin: auto;
-    }
-    .infop{
-      text-align: center;
-      margin: 0;
-    }
-    .list{
-      margin: 20px;
-    justify-content: center;
-    }
-    .list-items{
-margin: 20px;
-justify-content: center;
-    }
-    .thanks{
-      margin: 20px;
-    }
-    .footer{
-      width: 100%;
-      /* border: 2px solid red; */
-    }
-    .end{
-      /* border:  solid red; */
-      background-color: black;
-      text-align: center;
-      padding: 10px 0px 40px 0px;
-      color: white;
-    }
-    .digital{
-      gap:10px;
-    }
-    .head{
-      padding-top: 70px;
-    }
-    .lorem{
-      padding: 10px;
-      font-size: 10px;
-      font-weight: 500;
-    }
-    .links{
-
-     display: flex; 
-     justify-content: center;
-     padding: 0px 0px 50px 0px;
-     font-weight: 500;
-     font-size: 16px;
-     text-decoration: underline;
-     gap: 20px;
-     list-style: none;
-    }
-
+  .body1 {
+    flex-direction: column;
+  }
+  .anohterVersion {
+    display: block;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  .text_center {
+    text-align: center;
+  }
+  .container {
+    display: block;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  .an {
+    display: none;
+  }
+  .unwanted {
+    display: none;
+  }
+  .hide {
+    display: inline-block;
+  }
+  .list, .list-items, .class, .thanks, .social{
+    display: none;
+  }
+   .img_container .imag { 
+    padding: 1rem 3rem;
 
   }
+    /* Block of code */
+
+    .nav > .nav-btn {
+      display: inline-block;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+    }
+    .nav > .nav-btn > label {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      padding: 13px;
+    }
+    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+    .nav > .nav-btn > label > span {
+      display: block;
+      width: 25px;
+      height: 10px;
+      border-top: 2px solid #eee;
+    }
+    .nav > .nav-links {
+      position: absolute;
+      display: block;
+      width: 100%;
+      background-color: #333;
+      height: 0px;
+      transition: all 0.3s ease-in;
+      overflow-y: hidden;
+      top: 50px;
+      left: 0px;
+    }
+    .nav > .nav-links > a {
+      display: block;
+      width: 100%;
+    }
+    .nav > #nav-check:not(:checked) ~ .nav-links {
+      height: 0px;
+    }
+    .nav > #nav-check:checked ~ .nav-links {
+      height: calc(100vh - 50px);
+      overflow-y: auto;
+    }
+    .nav > .nav-header > .nav-title {
+      display: inline-block;
+      font-size: 32px;
+      color: black;
+      padding: 5px;
+    }
+    .header-class{
+      align-items: center;
+      padding: 20px;
+    }
+    .center{
+      width: 100%;
+      align-content: center;
+  }
+  .header-cont{
+    display: flex;
+    flex-direction: column;
+  }
+  .content{
+    width: 100%;
+  font-size: 26px;
+  }
+  .content2{
+    font-family:monospace;
+    font-size: 18px;
+    width: 100%;
+  }
+
+  .body-content{
+    margin: auto;
+    width: 100%;
+    align-content: center;
+    padding: 10px;
+  }
+
+  .hr{
+    width: 100%;
+  }
+  .imag{
+    margin-top: 20px;
+justify-content: center;
+justify-content: space-between;
+padding: 1rem 3rem;
+margin-bottom: -30px;
+padding-top: 30px;
+border: 1px solid rgba(0, 0, 0, .1);
+  }
+.man{
+  align-content: center;
+}
+.man img{
+  width: 100%;
+}
+.man2{
+  width: 100%;
+}
+  .lovely{
+    text-align: center;
+justify-content: center;
+
+  }
+
+  .man{
+    align-content: center;
+  }
+  .man img{
+    width: 100%;
+  }
+  .man2{
+    width: 100%;
+  }
+  .web{
+    padding: 20px;
+  }
+  .an{
+ text-align: center;
+ }
+  .what{
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    /* padding-bottom: 30px; */
+  }
+  .more-img{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    text-align: center;
+    width:100%;
+    align-content: center;
+  }
+.more-img img{
+  width: 100%;
+}
+.sign{
+  border: 2px solid black;
+  /* height: 180px; */
+  width: 100%;
+  align-content: center;
+  margin: 0px;
+}
+.input{
+  width: 100%;
+  margin: 0px;
+}
+#send{
+  width: 100%;
+  margin: 0px;
+}
+.design1{
+  display: block;
+}
+
+.info{
+text-align: center;
+margin: auto;
+}
+
+.p2{
+text-align: center;
+margin: auto;
+}
+.info2{
+  text-align: center;
+  margin: auto;
+}
+.infop{
+  text-align: center;
+  margin: 0;
+}
+.list{
+  margin: 20px;
+text-align: center;
+}
+.list-items{
+margin: 20px;
+text-align: center;
+}
+.class{
+  text-align: center;
+}
+.thanks{
+  margin: 20px;
+  text-align: center;
+}
+.social{
+  gap:5px;
+  justify-content: center;
+}
+.footer{
+  width: 100%;
+  /* border: 2px solid red; */
+}
+.end{
+  /* border:  solid red; */
+  background-color: black;
+  text-align: center;
+  padding: 10px 0px 40px 0px;
+  color: white;
+}
+.digital{
+  gap:10px;
+}
+.head{
+  padding-top: 70px;
+}
+.lorem{
+  padding: 10px;
+  font-size: 10px;
+  font-weight: 500;
+}
+.links{
+
+ display: flex; 
+ justify-content: center;
+ padding: 0px 0px 50px 0px;
+ font-weight: 500;
+ font-size: 16px;
+ text-decoration: underline;
+ gap: 20px;
+ list-style: none;
+}
+.next{
+  text-align: center;
+}
+
+}
